core-app-deploy/minio/conf/03-minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: svc-minio
  namespace: core-app
spec:
  ports:
    - name: minio-s3
      protocol: TCP
      port: 9000
    - name: minio-console
      protocol: TCP
      port: 9001
  selector:
    app: minio
