core-app-deploy/minio/conf/05-minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-minio
  namespace: core-app
  labels:
    app: minio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - s3.d7z.net
        - minio.internal.d7z.net
      secretName: tls-d7z-net
  rules:
    - host: s3.d7z.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-minio
                port:
                  name: minio-s3
    - host: minio.internal.d7z.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-minio
                port:
                  name: minio-console
